--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -192,13 +192,30 @@
     <Compile Include="Migrations\201403070118081_InitialCreate.Designer.cs">
       <DependentUpon>201403070118081_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201403072327596_Basics.cs" />
+    <Compile Include="Migrations\201403072327596_Basics.Designer.cs">
+      <DependentUpon>201403072327596_Basics.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Dance.cs" />
     <Compile Include="Models\DanceMusicConfiguration.cs" />
     <Compile Include="Models\DanceMusicInitializer.cs" />
     <Compile Include="Models\DanceMusicContext.cs" />
+    <Compile Include="Models\DanceRating.cs" />
+    <Compile Include="Models\DbObject.cs" />
+    <Compile Include="Models\Song.cs" />
+    <Compile Include="Models\SongLog.cs" />
+    <Compile Include="Models\SongProperty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\AlbumDetails.cs" />
+    <Compile Include="ViewModels\MergeCluster.cs" />
+    <Compile Include="ViewModels\SongCounts.cs" />
+    <Compile Include="ViewModels\SongDetails.cs" />
+    <Compile Include="ViewModels\SongMerge.cs" />
+    <Compile Include="ViewModels\UndoResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -270,6 +287,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201403070118081_InitialCreate.resx">
       <DependentUpon>201403070118081_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201403072327596_Basics.resx">
+      <DependentUpon>201403072327596_Basics.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
