--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -210,6 +210,10 @@
     <Compile Include="Migrations\201403072327596_Basics.Designer.cs">
       <DependentUpon>201403072327596_Basics.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201403171950537_LogRefactor.cs" />
+    <Compile Include="Migrations\201403171950537_LogRefactor.Designer.cs">
+      <DependentUpon>201403171950537_LogRefactor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -219,6 +223,8 @@
     <Compile Include="Models\DanceMusicContext.cs" />
     <Compile Include="Models\DanceRating.cs" />
     <Compile Include="Models\DbObject.cs" />
+    <Compile Include="Models\LogBase.cs" />
+    <Compile Include="Models\LogValue.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Models\SongLog.cs" />
     <Compile Include="Models\SongProperty.cs" />
@@ -352,6 +358,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201403072327596_Basics.resx">
       <DependentUpon>201403072327596_Basics.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201403171950537_LogRefactor.resx">
+      <DependentUpon>201403171950537_LogRefactor.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
