--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -214,9 +214,14 @@
     <Compile Include="Migrations\201403171950537_LogRefactor.Designer.cs">
       <DependentUpon>201403171950537_LogRefactor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201403191906568_ExplicitModified.cs" />
+    <Compile Include="Migrations\201403191906568_ExplicitModified.Designer.cs">
+      <DependentUpon>201403191906568_ExplicitModified.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\ModifiedRecord.cs" />
     <Compile Include="Models\Dance.cs" />
     <Compile Include="Models\DanceMusicConfiguration.cs" />
     <Compile Include="Models\DanceMusicInitializer.cs" />
@@ -231,6 +236,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utilities\AdmAuthentication.cs" />
+    <Compile Include="Utilities\DBExtentions.cs" />
     <Compile Include="ViewModels\AlbumDetails.cs" />
     <Compile Include="ViewModels\MergeCluster.cs" />
     <Compile Include="ViewModels\SongCounts.cs" />
@@ -287,6 +293,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\merge.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -361,6 +368,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201403171950537_LogRefactor.resx">
       <DependentUpon>201403171950537_LogRefactor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201403191906568_ExplicitModified.resx">
+      <DependentUpon>201403191906568_ExplicitModified.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
