--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
   <package id="chosen" version="1.1.0" targetFramework="net45" />
   <package id="chosen.jquery" version="1.1.0" targetFramework="net45" />
+  <package id="EFUtilities" version="0.4.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
