--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -16,20 +16,19 @@ Sample binding in application.config for iisexpress
 
 <configuration>
   <configSections>
-
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    
     <sectionGroup name="bundleTransformer">
-      
-      
-      
-    <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /><section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" /><section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" /></sectionGroup>
+      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
+      <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
+      <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
+    </sectionGroup>
     <sectionGroup name="jsEngineSwitcher">
-      
-      
-    <section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" /><section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" /></sectionGroup>
-  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
+      <section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
+      <section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" />
+    </sectionGroup>
+    <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-m4d-20140305044409.mdf;Initial Catalog=aspnet-m4d-20140305044409;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -52,30 +51,53 @@ Sample binding in application.config for iisexpress
     <httpRuntime targetFramework="4.5" maxRequestLength="10485760" />
     <trace enabled="true" writeToDiagnosticsTrace="true" mostRecent="true" pageOutput="false" />
     <customErrors mode="RemoteOnly"></customErrors>
-    
+
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
+    <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Platform" />
-      
-    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" /></httpModules>
-    
-  <httpHandlers>
-            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
-        </httpHandlers></system.web>
+
+      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+    </httpModules>
+
+    <httpHandlers>
+      <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+    </httpHandlers>
+  </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Platform" preCondition="managedHandler" />
-      
-    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
+
+      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+    </modules>
     <!--<staticContent>
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
     </staticContent>-->
     <handlers>
-      
-    <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /><add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" /><add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers>
-  <validation validateIntegratedModeConfiguration="false" /></system.webServer>
+
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" />
+      <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+    </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
+    <rewrite>
+      <rules>
+        <rule name="Remove trailing slash" stopProcessing="true">
+          <match url="(.*)/$" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Permanent" url="{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -252,52 +274,53 @@ Sample binding in application.config for iisexpress
       </ignoredTypes>
     </runtimePolicies>
     <!--<logging level="Trace" />-->
-  
-  <!-- 
+
+    <!-- 
           For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
-      --></glimpse>
+      -->
+  </glimpse>
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
       <css defaultMinifier="MicrosoftAjaxCssMinifier">
         <translators>
-          
-          
-        <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /><add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" /></translators>
-        
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+          <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" />
+        </translators>
         <minifiers>
-          
-          
-        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" /></minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers>
         <fileExtensions>
-          
-          
-        <add fileExtension=".css" assetTypeCode="Css" /><add fileExtension=".less" assetTypeCode="Less" /></fileExtensions>
-      <postProcessors>
-					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
-				</postProcessors></css>
+          <add fileExtension=".css" assetTypeCode="Css" />
+          <add fileExtension=".less" assetTypeCode="Less" />
+        </fileExtensions>
+        <postProcessors>
+          <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
+        </postProcessors>
+      </css>
       <js>
-        
         <minifiers>
-          
-          
-        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" /></minifiers>
-        
-      <translators>
-					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				</translators><fileExtensions>
-					<add fileExtension=".js" assetTypeCode="JavaScript" />
-				</fileExtensions></js>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers>
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+        </translators>
+        <fileExtensions>
+          <add fileExtension=".js" assetTypeCode="JavaScript" />
+        </fileExtensions>
+      </js>
     </core>
     <less useNativeMinification="false" ieCompat="true" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
       <jsEngine name="MsieJsEngine" />
     </less>
   </bundleTransformer>
   <jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd">
-    
-  <core>
-			<engines>
-				<add name="MsieJsEngine" type="JavaScriptEngineSwitcher.Msie.MsieJsEngine, JavaScriptEngineSwitcher.Msie" />
-			</engines>
-		</core></jsEngineSwitcher>
+    <core>
+      <engines>
+        <add name="MsieJsEngine" type="JavaScriptEngineSwitcher.Msie.MsieJsEngine, JavaScriptEngineSwitcher.Msie" />
+      </engines>
+    </core>
+  </jsEngineSwitcher>
 </configuration>
