--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -62,6 +62,7 @@
   <package id="MvcDiagnostics" version="5.2.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Owin.Security.Providers" version="1.20" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
